analizador/bison/y.output
Terminales no usados en la gramática

   TOK_FLECHA


Gramática

    0 $accept: programa $end

    1 programa: TOK_MAIN '{' declaraciones funciones sentencias '}'
    2         | TOK_MAIN '{' funciones sentencias '}'

    3 declaraciones: declaracion
    4              | declaracion declaraciones

    5 declaracion: modificador_acceso clase identificadores ';'
    6            | modificador_acceso declaracion_clase ';'

    7 modificador_acceso: TOK_HIDDEN TOK_UNIQUE
    8                   | TOK_SECRET TOK_UNIQUE
    9                   | TOK_EXPOSED TOK_UNIQUE
   10                   | TOK_HIDDEN
   11                   | TOK_SECRET
   12                   | TOK_EXPOSED
   13                   | TOK_UNIQUE
   14                   | %empty

   15 clase: clase_escalar
   16      | clase_vector
   17      | clase_objeto

   18 declaracion_clase: modificadores_clase TOK_CLASS identificador TOK_INHERITS identificadores '{' declaraciones funciones '}'
   19                  | modificadores_clase TOK_CLASS identificador '{' declaraciones funciones '}'

   20 modificadores_clase: %empty

   21 clase_escalar: tipo

   22 tipo: TOK_INT
   23     | TOK_BOOLEAN

   24 clase_objeto: '{' identificador '}'

   25 clase_vector: TOK_ARRAY tipo '[' constante_entera ']'

   26 identificadores: identificador
   27                | identificador ',' identificadores

   28 funciones: funcion funciones
   29          | %empty

   30 funcion: TOK_FUNCTION modificador_acceso tipo_retorno identificador '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

   31 tipo_retorno: TOK_NONE
   32             | tipo

   33 parametros_funcion: parametro_funcion resto_parametros_funcion
   34                   | %empty

   35 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   36                         | %empty

   37 parametro_funcion: tipo identificador

   38 declaraciones_funcion: declaraciones
   39                      | %empty

   40 sentencias: sentencia
   41           | sentencia sentencias

   42 sentencia: sentencia_simple ';'
   43          | bloque

   44 sentencia_simple: asignacion
   45                 | lectura
   46                 | escritura
   47                 | retorno_funcion
   48                 | identificador_clase '.' identificador '(' lista_expresiones ')'
   49                 | identificador '(' lista_expresiones ')'
   50                 | destruir_objeto

   51 destruir_objeto: TOK_DISCARD identificador

   52 bloque: condicional
   53       | bucle

   54 asignacion: identificador '=' exp
   55           | elemento_vector '=' exp
   56           | elemento_vector '=' TOK_INSTANCE_OF identificador '(' lista_expresiones ')'
   57           | identificador '=' TOK_INSTANCE_OF identificador '(' lista_expresiones ')'
   58           | identificador_clase '.' identificador '=' exp

   59 elemento_vector: identificador '[' exp ']'

   60 condicional: TOK_IF '(' exp ')' '{' sentencias '}'
   61            | TOK_IF '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

   62 bucle: TOK_WHILE '(' exp ')' '{' sentencias '}'

   63 lectura: TOK_SCANF identificador
   64        | TOK_SCANF elemento_vector

   65 escritura: TOK_PRINTF exp

   66 retorno_funcion: TOK_RETURN exp
   67                | TOK_RETURN TOK_NONE

   68 exp: exp '+' exp
   69    | exp '-' exp
   70    | exp '/' exp
   71    | exp '*' exp
   72    | '-' exp
   73    | exp TOK_AND exp
   74    | exp TOK_OR exp
   75    | '!' exp
   76    | identificador
   77    | constante
   78    | '(' exp ')'
   79    | '(' comparacion ')'
   80    | elemento_vector
   81    | identificador '(' lista_expresiones ')'
   82    | identificador_clase '.' identificador '(' lista_expresiones ')'
   83    | identificador_clase '.' identificador

   84 identificador_clase: identificador
   85                    | TOK_ITSELF

   86 lista_expresiones: exp resto_lista_expresiones
   87                  | %empty

   88 resto_lista_expresiones: ',' exp resto_lista_expresiones
   89                        | %empty

   90 comparacion: exp TOK_IGUAL exp
   91            | exp TOK_DISTINTO exp
   92            | exp TOK_MENORIGUAL exp
   93            | exp TOK_MAYORIGUAL exp
   94            | exp '<' exp
   95            | exp '>' exp

   96 constante: constante_logica
   97          | constante_entera

   98 constante_logica: TOK_TRUE
   99                 | TOK_FALSE

  100 constante_entera: TOK_CONSTANTE_ENTERA

  101 identificador: TOK_IDENTIFICADOR


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 75
'(' (40) 30 48 49 56 57 60 61 62 78 79 81 82
')' (41) 30 48 49 56 57 60 61 62 78 79 81 82
'*' (42) 71
'+' (43) 68
',' (44) 27 88
'-' (45) 69 72
'.' (46) 48 58 82 83
'/' (47) 70
';' (59) 5 6 35 42
'<' (60) 94
'=' (61) 54 55 56 57 58
'>' (62) 95
'[' (91) 25 59
']' (93) 25 59
'{' (123) 1 2 18 19 24 30 60 61 62
'}' (125) 1 2 18 19 24 30 60 61 62
error (256)
TOK_NONE (258) 31 67
TOK_CLASS (259) 18 19
TOK_INHERITS (260) 18
TOK_INSTANCE_OF (261) 56 57
TOK_DISCARD (262) 51
TOK_ITSELF (263) 85
TOK_FLECHA (264)
TOK_HIDDEN (265) 7 10
TOK_SECRET (266) 8 11
TOK_EXPOSED (267) 9 12
TOK_UNIQUE (268) 7 8 9 13
TOK_FUNCTION (269) 30
TOK_RETURN (270) 66 67
TOK_MAIN (271) 1 2
TOK_INT (272) 22
TOK_BOOLEAN (273) 23
TOK_ARRAY (274) 25
TOK_IF (275) 60 61
TOK_ELSE (276) 61
TOK_WHILE (277) 62
TOK_SCANF (278) 63 64
TOK_PRINTF (279) 65
TOK_IDENTIFICADOR (280) 101
TOK_IGUAL (281) 90
TOK_DISTINTO (282) 91
TOK_MENORIGUAL (283) 92
TOK_MAYORIGUAL (284) 93
TOK_OR (285) 74
TOK_AND (286) 73
TOK_CONSTANTE_ENTERA (287) 100
TOK_FALSE (288) 99
TOK_TRUE (289) 98


No terminales con las reglas donde aparecen

$accept (52)
    en la izquierda: 0
programa (53)
    en la izquierda: 1 2, en la derecha: 0
declaraciones (54)
    en la izquierda: 3 4, en la derecha: 1 4 18 19 38
declaracion (55)
    en la izquierda: 5 6, en la derecha: 3 4
modificador_acceso (56)
    en la izquierda: 7 8 9 10 11 12 13 14, en la derecha: 5 6 30
clase (57)
    en la izquierda: 15 16 17, en la derecha: 5
declaracion_clase (58)
    en la izquierda: 18 19, en la derecha: 6
modificadores_clase (59)
    en la izquierda: 20, en la derecha: 18 19
clase_escalar (60)
    en la izquierda: 21, en la derecha: 15
tipo (61)
    en la izquierda: 22 23, en la derecha: 21 25 32 37
clase_objeto (62)
    en la izquierda: 24, en la derecha: 17
clase_vector (63)
    en la izquierda: 25, en la derecha: 16
identificadores (64)
    en la izquierda: 26 27, en la derecha: 5 18 27
funciones (65)
    en la izquierda: 28 29, en la derecha: 1 2 18 19 28
funcion (66)
    en la izquierda: 30, en la derecha: 28
tipo_retorno (67)
    en la izquierda: 31 32, en la derecha: 30
parametros_funcion (68)
    en la izquierda: 33 34, en la derecha: 30
resto_parametros_funcion (69)
    en la izquierda: 35 36, en la derecha: 33 35
parametro_funcion (70)
    en la izquierda: 37, en la derecha: 33 35
declaraciones_funcion (71)
    en la izquierda: 38 39, en la derecha: 30
sentencias (72)
    en la izquierda: 40 41, en la derecha: 1 2 30 41 60 61 62
sentencia (73)
    en la izquierda: 42 43, en la derecha: 40 41
sentencia_simple (74)
    en la izquierda: 44 45 46 47 48 49 50, en la derecha: 42
destruir_objeto (75)
    en la izquierda: 51, en la derecha: 50
bloque (76)
    en la izquierda: 52 53, en la derecha: 43
asignacion (77)
    en la izquierda: 54 55 56 57 58, en la derecha: 44
elemento_vector (78)
    en la izquierda: 59, en la derecha: 55 56 64 80
condicional (79)
    en la izquierda: 60 61, en la derecha: 52
bucle (80)
    en la izquierda: 62, en la derecha: 53
lectura (81)
    en la izquierda: 63 64, en la derecha: 45
escritura (82)
    en la izquierda: 65, en la derecha: 46
retorno_funcion (83)
    en la izquierda: 66 67, en la derecha: 47
exp (84)
    en la izquierda: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83,
    en la derecha: 54 55 58 59 60 61 62 65 66 68 69 70 71 72 73 74
    75 78 86 88 90 91 92 93 94 95
identificador_clase (85)
    en la izquierda: 84 85, en la derecha: 48 58 82 83
lista_expresiones (86)
    en la izquierda: 86 87, en la derecha: 48 49 56 57 81 82
resto_lista_expresiones (87)
    en la izquierda: 88 89, en la derecha: 86 88
comparacion (88)
    en la izquierda: 90 91 92 93 94 95, en la derecha: 79
constante (89)
    en la izquierda: 96 97, en la derecha: 77
constante_logica (90)
    en la izquierda: 98 99, en la derecha: 96
constante_entera (91)
    en la izquierda: 100, en la derecha: 25 97
identificador (92)
    en la izquierda: 101, en la derecha: 18 19 24 26 27 30 37 48 49
    51 54 56 57 58 59 63 76 81 82 83 84


Estado 0

    0 $accept: . programa $end

    TOK_MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: TOK_MAIN . '{' declaraciones funciones sentencias '}'
    2         | TOK_MAIN . '{' funciones sentencias '}'

    '{'  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: TOK_MAIN '{' . declaraciones funciones sentencias '}'
    2         | TOK_MAIN '{' . funciones sentencias '}'

    TOK_HIDDEN    desplazar e ir al estado 5
    TOK_SECRET    desplazar e ir al estado 6
    TOK_EXPOSED   desplazar e ir al estado 7
    TOK_UNIQUE    desplazar e ir al estado 8
    TOK_FUNCTION  desplazar e ir al estado 9

    TOK_CLASS    reduce usando la regla 14 (modificador_acceso)
    TOK_INT      reduce usando la regla 14 (modificador_acceso)
    TOK_BOOLEAN  reduce usando la regla 14 (modificador_acceso)
    TOK_ARRAY    reduce usando la regla 14 (modificador_acceso)
    '{'          reduce usando la regla 14 (modificador_acceso)
    $default     reduce usando la regla 29 (funciones)

    declaraciones       ir al estado 10
    declaracion         ir al estado 11
    modificador_acceso  ir al estado 12
    funciones           ir al estado 13
    funcion             ir al estado 14


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    7 modificador_acceso: TOK_HIDDEN . TOK_UNIQUE
   10                   | TOK_HIDDEN .

    TOK_UNIQUE  desplazar e ir al estado 15

    $default  reduce usando la regla 10 (modificador_acceso)


Estado 6

    8 modificador_acceso: TOK_SECRET . TOK_UNIQUE
   11                   | TOK_SECRET .

    TOK_UNIQUE  desplazar e ir al estado 16

    $default  reduce usando la regla 11 (modificador_acceso)


Estado 7

    9 modificador_acceso: TOK_EXPOSED . TOK_UNIQUE
   12                   | TOK_EXPOSED .

    TOK_UNIQUE  desplazar e ir al estado 17

    $default  reduce usando la regla 12 (modificador_acceso)


Estado 8

   13 modificador_acceso: TOK_UNIQUE .

    $default  reduce usando la regla 13 (modificador_acceso)


Estado 9

   30 funcion: TOK_FUNCTION . modificador_acceso tipo_retorno identificador '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_HIDDEN   desplazar e ir al estado 5
    TOK_SECRET   desplazar e ir al estado 6
    TOK_EXPOSED  desplazar e ir al estado 7
    TOK_UNIQUE   desplazar e ir al estado 8

    $default  reduce usando la regla 14 (modificador_acceso)

    modificador_acceso  ir al estado 18


Estado 10

    1 programa: TOK_MAIN '{' declaraciones . funciones sentencias '}'

    TOK_FUNCTION  desplazar e ir al estado 9

    $default  reduce usando la regla 29 (funciones)

    funciones  ir al estado 19
    funcion    ir al estado 14


Estado 11

    3 declaraciones: declaracion .
    4              | declaracion . declaraciones

    TOK_HIDDEN   desplazar e ir al estado 5
    TOK_SECRET   desplazar e ir al estado 6
    TOK_EXPOSED  desplazar e ir al estado 7
    TOK_UNIQUE   desplazar e ir al estado 8

    TOK_CLASS    reduce usando la regla 14 (modificador_acceso)
    TOK_INT      reduce usando la regla 14 (modificador_acceso)
    TOK_BOOLEAN  reduce usando la regla 14 (modificador_acceso)
    TOK_ARRAY    reduce usando la regla 14 (modificador_acceso)
    '{'          reduce usando la regla 14 (modificador_acceso)
    $default     reduce usando la regla 3 (declaraciones)

    declaraciones       ir al estado 20
    declaracion         ir al estado 11
    modificador_acceso  ir al estado 12


Estado 12

    5 declaracion: modificador_acceso . clase identificadores ';'
    6            | modificador_acceso . declaracion_clase ';'

    TOK_INT      desplazar e ir al estado 21
    TOK_BOOLEAN  desplazar e ir al estado 22
    TOK_ARRAY    desplazar e ir al estado 23
    '{'          desplazar e ir al estado 24

    $default  reduce usando la regla 20 (modificadores_clase)

    clase                ir al estado 25
    declaracion_clase    ir al estado 26
    modificadores_clase  ir al estado 27
    clase_escalar        ir al estado 28
    tipo                 ir al estado 29
    clase_objeto         ir al estado 30
    clase_vector         ir al estado 31


Estado 13

    2 programa: TOK_MAIN '{' funciones . sentencias '}'

    TOK_DISCARD        desplazar e ir al estado 32
    TOK_ITSELF         desplazar e ir al estado 33
    TOK_RETURN         desplazar e ir al estado 34
    TOK_IF             desplazar e ir al estado 35
    TOK_WHILE          desplazar e ir al estado 36
    TOK_SCANF          desplazar e ir al estado 37
    TOK_PRINTF         desplazar e ir al estado 38
    TOK_IDENTIFICADOR  desplazar e ir al estado 39

    sentencias           ir al estado 40
    sentencia            ir al estado 41
    sentencia_simple     ir al estado 42
    destruir_objeto      ir al estado 43
    bloque               ir al estado 44
    asignacion           ir al estado 45
    elemento_vector      ir al estado 46
    condicional          ir al estado 47
    bucle                ir al estado 48
    lectura              ir al estado 49
    escritura            ir al estado 50
    retorno_funcion      ir al estado 51
    identificador_clase  ir al estado 52
    identificador        ir al estado 53


Estado 14

   28 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 9

    $default  reduce usando la regla 29 (funciones)

    funciones  ir al estado 54
    funcion    ir al estado 14


Estado 15

    7 modificador_acceso: TOK_HIDDEN TOK_UNIQUE .

    $default  reduce usando la regla 7 (modificador_acceso)


Estado 16

    8 modificador_acceso: TOK_SECRET TOK_UNIQUE .

    $default  reduce usando la regla 8 (modificador_acceso)


Estado 17

    9 modificador_acceso: TOK_EXPOSED TOK_UNIQUE .
